# serializer version: 1
# name: test_entities[switch.gree_ac_panel_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.gree_ac_panel_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Panel light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Panel light',
    'platform': 'gree_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '01JTEST0000000000000000001_light',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.gree_ac_panel_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gree AC Panel light',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gree_ac_panel_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.gree_ac_turbo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.gree_ac_turbo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Turbo',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Turbo',
    'platform': 'gree_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'turbo',
    'unique_id': '01JTEST0000000000000000001_turbo',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.gree_ac_turbo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gree AC Turbo',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gree_ac_turbo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.gree_ac_xtra_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.gree_ac_xtra_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Xtra fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Xtra fan',
    'platform': 'gree_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'xfan',
    'unique_id': '01JTEST0000000000000000001_xfan',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.gree_ac_xtra_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gree AC Xtra fan',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gree_ac_xtra_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
